--- a/rhevbackup/rhevbackup/templates/base.html
+++ b/rhevbackup/rhevbackup/templates/base.html
@@ -9,7 +9,7 @@
 	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	    <title>Auth Demo</title>
+	    <title>RHEV Backup</title>
 
 	    <!-- Core CSS - Include with every page -->
 	    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -26,7 +26,9 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="#">RHEV Backup</a>
+	      
+	      	<a class="navbar-brand text-center center-block" href="#">RHEV Backup</a>
+	    
 	    </div>
 
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
